# nimbro_network

./: CMakeLists.txt  README.md
nimbro_cam_transport/: CMakeLists.txt
nimbro_service_transport/: CMakeLists.txt
nimbro_service_transport/src/udp/: udp_client.cpp
xbot_centauro_aeronav/: CMakeLists.txt  package.xml
xbot_centauro_aeronav/config/: services.yaml
xbot_centauro_aeronav/launch/: network_bringup.launch
xbot_centauro_control_pc/: CMakeLists.txt  package.xml
xbot_centauro_control_pc/config/: services.yaml  topics.yaml
xbot_centauro_control_pc/launch/: network_bringup.launch  network_to_aeronav_bringup.launch  network_to_pilot_bringup.launch
xbot_centauro_pilot_pc/: CMakeLists.txt  package.xml
xbot_centauro_pilot_pc/config/: services.yaml  topics.yaml
xbot_centauro_pilot_pc/launch/: network_bringup.launch
